--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,5 @@
 {{test-component-ember-data list=model}}
+
+{{!-- Uncomment to render different examples --}}
+{{!-- {{test-component-immut}} --}}
+{{!-- {{test-component}} --}}
